@@ -32,7 +32,7 @@
 /**
  * @brief Firmware version.
  */
-#define STRING_VERSION "0.0.3"
+#define STRING_VERSION "0.0.4"
 
 /**
  * @brief Name of the default network to try and connect to.
@@ -80,11 +80,11 @@
 /**
  * @brief Print debug info on the serial port.
  */
-//#define DEBUG
+#define DEBUG
 /**
  * @brief Print memory allocation info.
  */
-//#define DEBUG_MEM
+#define DEBUG_MEM
 /**
  * @brief List memory allocations.
  */
